# sql-field-report

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: push.yml
sql_field_report/: __init__.py  __main__.py  sql_field_report.py
sql_field_report/constants/: datatypes.py  field_report_schema.py  illegal_chars.py
sql_field_report/utils/: analysis.py  databases.py  excel.py  file_utils.py
tests/: test_analysis.py  test_connectorx.py  test_dataframe.py  test_sql_field_report.py
