[tool.poetry]
name = "sql-field-report"
version = "1.2.3"
description = ""
authors = ["Will James <willj@dealcloud.com>"]
readme = "README.md"
packages = [{include = "sql_field_report"}]

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.11"
python-dotenv = "^1.0.0"
regex = "^2023.3.23"
pyodbc = "^4.0.39"
typer = {extras = ["all"], version = "^0.7.0"}
coloredlogs = "^15.0.1"
mysql-connector-python = "^8.0.33"
pytest = "^7.3.2"
faust-cchardet = "^2.1.18"
polars = "^0.18.3"
xlsx2csv = "^0.8.1"
pyarrow = "^12.0.1"
connectorx = "^0.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
commitizen = "^3.6.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
sql-field-report = "sql_field_report.sql_field_report:app"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
