[tool.poetry]
name = "sql-field-report"
version = "1.2.7"
description = ""
authors = ["Will James <willj@dealcloud.com>"]
readme = "README.md"
packages = [{include = "sql_field_report"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.11"
python-dotenv = "^1.0.0"
regex = "^2024.5"
pyodbc = "^5.1.0"
typer = {extras = ["all"], version = "^0.12.0"}
coloredlogs = "^15.0.1"
mysql-connector-python = "^8.0.33"
pytest = "^8.2"
faust-cchardet = "^2.1.18"
polars = "^0.20"
xlsx2csv = "^0.8.1"
pyarrow = "^16.1"
connectorx = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
sql-field-report = "sql_field_report.sql_field_report:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
